tests/ui/compile-fail/pin_data/twice.stderr
error[E0119]: conflicting implementations of trait `HasPinData` for type `Foo`
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
3 | #[pin_data]
  | ----------- first implementation here
4 | #[pin_data]
  | ^^^^^^^^^^^ conflicting implementation for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Unpin` for type `Foo`
 --> tests/ui/compile-fail/pin_data/twice.rs:4:1
  |
3 | #[pin_data]
  | ----------- first implementation here
4 | #[pin_data]
  | ^^^^^^^^^^^ conflicting implementation for `Foo`
  |
  = note: this error originates in the attribute macro `pin_data` (in Nightly builds, run with -Z macro-backtrace for more info)
